<resources>
 <string name="app_name">黒板</string>
 <string name="PostExplain">画像と共に投稿するコメントを入力して下さい</string>
 <string name="now_sending">送信中...</string>
 <string name="sending_complete">送信完了しました</string>
 <string name="sending_error">送信失敗しました</string>
 <string name="twitter_error">Twitter送信失敗しました。IDとパスワードを確認してください。また、TwitPicを使えるか確認してください。</string>
 <string name="facebook_error">Facebook送信失敗しました</string>
 <string name="twitterfacebook_error">Twitter・Facebook送信失敗しました</string>
 <string name="api_response">Api Response:</string>
 <string name="view_photo">View Photo</string>
 <string name="external_title">Facebook連携</string>
 <string name="save">保存する</string>
 <string name="close">終了する</string>
 <string name="save_complete">保存しました</string>
 <string name="white">白チョーク</string>
 <string name="red">赤チョーク</string>
 <string name="blue">青チョーク</string>
 <string name="yellow">黄色チョーク</string>
 <string name="green">緑チョーク</string>
 <string name="elase_mode">黒板消しモード</string>
 <string name="select_elase">消し方を選んでください</string>
 <string name="all_elase">全消し</string>
 <string name="yubi_elase">指で消す</string>
 <string name="select_photo">写真を選ぶ</string>
 <string name="image_get_error">写真を取得できませんでした</string>
 <string name="default_elase">初期化する</string>
 <string name="save_libraly">ライブラリに保存する</string>
 <string name="kokuban_mode">黒板を表示する</string>
 <string name="snow_image">雪結晶</string>
 <string name="use_yukidaruma">雪だるまを使う</string>
 <string name="use_chork">チョークを使う</string>
 <string name="buy_kokuban">広告を消してフル機能使えるようにする</string>
 <string name="use_year">年を使う</string>
 <string name="line_select">線の太さを選ぶ</string>
</resources>